--- a/static/css/src/im.css
+++ b/static/css/src/im.css
@@ -524,7 +524,7 @@ button, textarea, input {
 	height: 80px;
 	overflow: hidden;
 }
-img.easemobWidget-msg-fileicon {
+img.easemobWidget-msg-fileicon,img.easemobWidget-msg-blessbagicon {
 	width: 80px;
     height: 80px;
     position: absolute;
